Implementación de JWT
Ya funciona la vista de "login", faltan detalles